# paper-copilot

./: .gitignore  config.yaml.example  pyproject.toml
docs/: index.html  server.py
src/: main.py
src/analyzer/: openai_client.py  prompts.py
src/extractor/: pdf.py
src/fetcher/: arxiv.py  models.py  openalex.py  semantic_scholar.py
src/obsidian/: exporter.py  graph_html.py
src/storage/: database.py
worker/: index.js  wrangler.toml
worker-slack/: index.js  package-lock.json  package.json  wrangler.toml
worker/.wrangler/cache/: wrangler-account.json
