[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-copilot"
version = "0.1.0"
description = "LLM Research Copilot — arXiv paper collection, analysis, and Obsidian knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "pymupdf4llm>=0.0.10",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
paper-copilot = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
